Add temporary bootstrap styles. Add option to sign up.

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,9 +1,13 @@
 {% extends 'index.html' %}
 
 {% block content %}
-    {% if user.is_authenticated %}
-        <h2><a href="{% url 'log-out' %}" class="log-link-btn">Log Out</a></h2>
-    {% else %}
-        <h2><a href="{% url 'log-in' %}" class="log-link-btn">Log In</a></h2>
-    {% endif %}
+    <div class="flex">
+        {% if user.is_authenticated %}
+            <a href="{% url 'log-out' %}" class="log-link-btn link">Log Out</a>
+        {% else %}
+            <a href="{% url 'log-in' %}" class="log-link-btn link">Log In</a>
+        {% endif %}
+        <a href="{% url 'register' %}" class="registe-btn link">Register</a>
+    </div>
+    <hr>
 {% endblock content %}
