--- a/authenticate/templates/authenticate/log-in.html
+++ b/authenticate/templates/authenticate/log-in.html
@@ -2,21 +2,21 @@
 
 {% block navbar %}
     <h1>Log In</h1>
-{% endblock %}
+{% endblock navbar %}
 
 {% block content %}
-    <div class="log-form">
+    <div class="form-group">
         <form action="{% url 'log-in' %}" method="POST">
             {% csrf_token %}
-            <h3 class="log-mail">
-                Username:
-                <input type="text" class="input_bar" placeholder="" name="username">
-            </h3>
-            <h3 class="log-password">
-                Password:
-                <input type="password" class="input_bar" name="password">
-            </h3>
-            <input type="submit" value="Submit" class="btn">
+            <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" class="form-control" id="username" placeholder="Username" name="username">
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" id="password" placeholder="Password" name="password">
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
 {% endblock content %}
