--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{ title }}</title>
     <link rel="stylesheet" type="text/css" media="screen" href="{% static 'styles/styles.css' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-    <header class="navbar">
+    <header class="nav">
         <h1>
             <a href="{% url 'home' %}">Home</a>
         </h1>
@@ -21,7 +22,7 @@
     {% if messages %}
         <div class="messages">
             {% for message in messages %}
-                <small class="message">{{ message }}</small>
+                <small class="alert alert-primary" role="alert">{{ message }}</small>
             {% endfor %}
         </div>
     {% endif %}
