--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -1,5 +1,32 @@
+:root{
+    --dark: #4e4f4e;
+    --darker: #3e3e3e;
+    --grey: #686968;
+    --lighter: #c7c7c7;
+    --light: #adaaaa;
+    --cyan: #4795bf;
+    --dangerous-red: #db2a44;
+    --sun: #ebb734;
+}
+
+hr {
+    height: 1px;
+    background-color: var(--grey);
+}
+
+
 p {
-    background-color: aquamarine;
+    margin: 5rem;
+    max-width: 60%;
+    background: var(--dark);
+    color: var(--lighter);
+    border-radius: 15px;
+    padding: 5px;
+}
+
+.post {
+    max-width: 40vw;
+    margin: 0 auto;
 }
 
 .btn {
@@ -27,6 +54,33 @@ p {
     margin: 1rem;
 }
 
-.messages {
+.messages,.post {
     margin: 2rem;
+    background-color: var(--lighter);
+    border-radius: 15px;
+    padding: 1rem;
+}
+
+.messages {
+    max-width: 40vw;
+}
+
+.content {
+    margin: 3rem;
+}
+
+.post {
+    margin: 2rem;
+}
+
+.nav-link {
+    font-size: 3rem;
+}
+
+
+.username {
+    background-color: var(--light);
+    color: var(--darker);
+    border-radius: 15px;
+    padding: 2px;
 }
