--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,9 @@
     <title>{{ title }}</title>
     <link rel="stylesheet" type="text/css" media="screen" href="{% static 'styles/styles.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <style type="text/css">
+       body { background: var(--dark) !important; }
+    </style>
 </head>
 <body>
     <header class="nav">
@@ -26,7 +29,9 @@
             {% endfor %}
         </div>
     {% endif %}
-    {% block content %}
-    {% endblock content %}
+    <div class="content">
+        {% block content %}
+        {% endblock content %}
+    </div>
 </body>
 </html>
