--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{{ title }}</title>
+    <title>{% block title %}{% endblock title %}</title>
     <link rel="stylesheet" type="text/css" media="screen" href="{% static 'styles/styles.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <style type="text/css">
@@ -23,7 +23,7 @@
     </header>
     <hr>
     {% if messages %}
-        <div class="messages">
+        <div>
             {% for message in messages %}
                 <small class="alert alert-primary" role="alert">{{ message }}</small>
             {% endfor %}
