--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -3,12 +3,13 @@
 {% block content %}
     <div class="flex">
         {% if user.is_authenticated %}
-            <a href="{% url 'log-out' %}" class="log-link-btn link">Log Out</a>
+            <a href="{% url 'log-out' %}">Log Out</a>
+            <a href="{% url 'blog' %}">Create a Post</a>
         {% else %}
-            <a href="{% url 'log-in' %}" class="log-link-btn link">Log In</a>
+            <a href="{% url 'log-in' %}">Log In</a>
+            <a href="{% url 'register' %}">Register</a>
         {% endif %}
-        <a href="{% url 'register' %}" class="register-btn link">Register</a>
-        <a href="{% url 'posts' 1 %}" class="link">Posts</a>
+        <a href="{% url 'posts' 1 %}">Posts</a>
     </div>
     <hr>
 {% endblock content %}
