fix page title issues

--- a/authenticate/templates/authenticate/log-in.html
+++ b/authenticate/templates/authenticate/log-in.html
@@ -1,5 +1,9 @@
 {% extends 'index.html' %}
 
+{% block title %}
+    Log in
+{% endblock title %}
+
 {% block navbar %}
     <h1>Log In</h1>
 {% endblock navbar %}
