--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -1,5 +1,9 @@
 {% extends 'index.html' %}
 
+{% block title %}
+    Home
+{% endblock title %}
+
 {% block content %}
     <div class="flex">
         {% if user.is_authenticated %}
